Removed 'p' as paste, I like it as prev

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,10 +34,10 @@ bind m set-window-option monitor-activity
 setw -g mode-keys vi
 
 # Vim like cut-and-paste
-unbind [
+#unbind [
 bind Escape copy-mode
-unbind p
-bind p paste-buffer
+#unbind p
+#bind p paste-buffer
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy C-v rectangle-toggle
 bind-key -t vi-copy y copy-selection
@@ -132,8 +132,8 @@ set-window-option -g mode-bg                  '#2222ee'
 set-window-option -g mode-fg                  '#dddddd'
 
 # Status line
-set-window-option -g status-bg      '#000044'
-set-window-option -g status-fg      '#dddddd'
+set-window-option -g status-bg                black'
+set-window-option -g status-fg                '#dddddd'
 
 set-window-option -g window-status-fg         '#aaaaaa'
 set-window-option -g window-status-current-fg colour166
