--- a/.tmux.conf
+++ b/.tmux.conf
@@ -132,7 +132,7 @@ set-window-option -g mode-bg                  '#2222ee'
 set-window-option -g mode-fg                  '#dddddd'
 
 # Status line
-set-window-option -g status-bg                black'
+set-window-option -g status-bg                black
 set-window-option -g status-fg                '#dddddd'
 
 set-window-option -g window-status-fg         '#aaaaaa'
