Try to force new window with reattach...

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,9 @@ set -g default-terminal "screen-256color"
 
 # We like ZSH! (with fix for macs)
 if-shell 'hash reattach-to-user-namespace' 'set-option -g default-command "reattach-to-user-namespace -l $SHELL"' 'set-option -g default-command "$SHELL"'
+if-shell 'hash reattach-to-user-namespace' 'new-window "reattach-to-user-namespace -l $SHELL"'
+# The second line above is needed to cause the first window to load with reattach-to-user-namespace.
+# Without it, tmux uses default-shell.
 
 ### Key Bindings ###
 
