--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,20 +1,11 @@
 set -g default-terminal "screen-256color"
 
-# We like ZSH! (with fix for macs)
-if-shell 'hash reattach-to-user-namespace' 'set-option -g default-command "reattach-to-user-namespace -l $SHELL"' 'set-option -g default-command "$SHELL"'
-if-shell 'hash reattach-to-user-namespace' 'new-window "reattach-to-user-namespace -l $SHELL"'
-# The second line above is needed to cause the first window to load with reattach-to-user-namespace.
-# Without it, tmux uses default-shell.
-
 ### Key Bindings ###
 
 # My favorite prefix.
 set -g prefix `
 unbind C-b
 bind `     send-prefix
-#set -g prefix C-t
-#unbind C-b
-#bind C-t send-prefix
 
 # Screen kill window.
 unbind k
@@ -31,10 +22,18 @@ bind-key S command-prompt -p "ssh: " "new-window -n %1 'ssh %1'"
 
 # Monitor Activity
 bind m set-window-option monitor-activity
+setw -g monitor-activity on
+set -g visual-activity on
 
 #### VIM-a-palooza ####
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
+
+# decrease command delay (increases vim responsiveness)
+set -sg escape-time 1
+
+# increase repeat time for repeatable commands
+set -g repeat-time 1000
 
 # Vim like cut-and-paste
 #unbind [
@@ -60,20 +59,20 @@ unbind ^w
 bind ^w select-pane -t :.+
 
 # use the vim resize keys
-bind < resize-pane -L 10
-bind > resize-pane -R 10
-bind - resize-pane -D 10
-bind + resize-pane -U 10
+bind -r < resize-pane -L 10
+bind -r > resize-pane -R 10
+bind -r - resize-pane -D 10
+bind -r + resize-pane -U 10
 
 # OS-X cut-and-paste buffers
 if-shell 'hash reattach-to-user-namespace' 'bind C-c run "tmux show-buffer | reattach-to-user-namespace pbcopy"'
 if-shell 'hash reattach-to-user-namespace' 'bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"'
 
 # Panes (parts of windows)
-bind up    resize-pane -U 5
-bind down  resize-pane -D 5
-bind left  resize-pane -L 5
-bind right resize-pane -R 5
+bind -r up    resize-pane -U 1
+bind -r down  resize-pane -D 1
+bind -r left  resize-pane -L 1
+bind -r right resize-pane -R 1
 bind tab   next-layout
 
 bind _   split-window
@@ -101,6 +100,9 @@ set -g set-titles-string "tmux(#S:#I) #W"
 
 ### Theme ###
 # Status bar.
+set -g status-utf8 on
+set -g status-interval 30
+
 set-option -g status-justify left
 set -g status-attr dim
 set -g status-bg   blue
@@ -117,9 +119,8 @@ set -g status-fg   white
 # #W                Current window name
 # ##                A literal `#'
 
-set -g status-interval 15
 set -g status-justify centre # center spelled funny
-set -g status-left  '#[fg=#00ff00] #H #[default]'
+set -g status-left  '#[fg=#00ff00] #h #[default]'
 set -g status-right '#[fg=#00ff00](#S) #[fg=#eeeeee] %H:%M %Y/%m/%d #[default]'
 #set -g status-left '#[fg=green](#S) #(whoami)@#H#[default]'
 #
@@ -140,7 +141,12 @@ set-window-option -g status-fg                '#dddddd'
 
 set-window-option -g window-status-fg         '#aaaaaa'
 set-window-option -g window-status-current-fg colour166
+
+# Enable mouse support (works in iTerm)
 set-window-option -g mode-mouse copy-mode # Mouse works, except it doesn't start copy mode. (tmux 1.6)
+set-option -g mouse-select-pane on
+set-option -g mouse-resize-pane on
+set-option -g mouse-select-window on
 
 # Message popup.
 set-option -g message-fg black
