theme'd the prompt

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -107,27 +107,9 @@ set -g status-attr dim
 set -g status-bg   blue
 set -g status-fg   white
 
-# #(shell-command)  First line of the command's output
-# #[attributes]     Colour or attribute change
-# #H                Hostname of local host
-# #F                Current window flag
-# #I                Current window index
-# #P                Current pane index
-# #S                Session name
-# #T                Current window title
-# #W                Current window name
-# ##                A literal `#'
-
 set -g status-justify centre # center spelled funny
-set -g status-left  '#[fg=#00ff00] #h #[default]'
-set -g status-right '#[fg=#00ff00](#S) #[fg=#eeeeee] %H:%M %Y/%m/%d #[default]'
-#set -g status-left '#[fg=green](#S) #(whoami)@#H#[default]'
-#
-##set -g status-right '#[fg=yellow](cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=blue]%H:%M#[default]'
-##set-option -g status-right "[#[fg=red]#([ ! -z $SSH_TTY ] && echo ssh)#(whoami)@#(hostname -s)#[default]] [#(uptime | awk '{print $6}') users]"
-#
-#set -g status-right '#[fg=blue]#[attr=bright]%H:%M#[default]'
-
+set -g status-left  '#[bg=#0088ff]#[fg=#ffff00] #(echo "${SHORTHOST:-local}") #[default]#[fg=#0088ff]⮀#[default]'
+set -g status-right '#[fg=#44ff22]⮂#[default]#[bg=#44ff22]#[fg=#8888bb] #S #[fg=#222222]⮃ #[fg=white]%H:%M %Y/%m/%d #[default]'
 
 #### Colors #####
 # When it "[tmux]" mode...
@@ -135,7 +117,7 @@ set-window-option -g mode-bg                  '#2222ee'
 set-window-option -g mode-fg                  '#dddddd'
 
 # Status line
-set-window-option -g status-bg                black
+set-window-option -g status-bg                '#222222'
 set-window-option -g status-fg                '#dddddd'
 
 set-window-option -g window-status-fg         '#aaaaaa'
