Put reattach-to-user-namespace back in

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,10 @@
 set -g default-terminal "screen-256color"
+set -g default-command "command -v reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l ${SHELL} || ${SHELL}"
+
+# OS-X cut-and-paste buffers
+if-shell 'command -v reattach-to-user-namespace' 'bind C-c run "tmux show-buffer | reattach-to-user-namespace pbcopy"'
+if-shell 'command -v reattach-to-user-namespace' 'bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"'
+
 
 ### Key Bindings ###
 
@@ -62,11 +68,6 @@ bind -r < resize-pane -L 10
 bind -r > resize-pane -R 10
 bind -r - resize-pane -D 10
 bind -r + resize-pane -U 10
-
-# OS-X cut-and-paste buffers
-if-shell 'hash reattach-to-user-namespace' 'bind C-c run "tmux show-buffer | reattach-to-user-namespace pbcopy"'
-if-shell 'hash reattach-to-user-namespace' 'bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"'
-
 # Panes (parts of windows)
 bind -r up    resize-pane -U 1
 bind -r down  resize-pane -D 1
