--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,27 +53,36 @@ bind-key -t vi-copy y copy-selection
 bind s split-window -v
 bind v split-window -h
 
-# Move between panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# Smart pane switching with awareness of vim splits
+# https://github.com/christoomey/vim-tmux-navigator
+bind -n C-h run-shell "[ '#{pane_current_command}' = 'vim' -o '#{window_panes}' -eq 1 ] && tmux send-keys C-h || tmux select-pane -L"
+bind -n C-j run-shell "[ '#{pane_current_command}' = 'vim' -o '#{window_panes}' -eq 1 ] && tmux send-keys C-j || tmux select-pane -D"
+bind -n C-k run-shell "[ '#{pane_current_command}' = 'vim' -o '#{window_panes}' -eq 1 ] && tmux send-keys C-k || tmux select-pane -U"
+bind -n C-l run-shell "[ '#{pane_current_command}' = 'vim' -o '#{window_panes}' -eq 1 ] && tmux send-keys C-l || tmux select-pane -R"
+bind -n C-\ run-shell "[ '#{pane_current_command}' = 'vim' -o '#{window_panes}' -eq 1 ] && tmux send-keys 'C-\\' || tmux select-pane -l"
 
-# quick pane cycling
-unbind ^w
-bind ^w select-pane -t :.+
+## Move between panes
+#bind h select-pane -L
+#bind j select-pane -D
+#bind k select-pane -U
+#bind l select-pane -R
 
-# use the vim resize keys
-bind -r < resize-pane -L 10
-bind -r > resize-pane -R 10
-bind -r - resize-pane -D 10
-bind -r + resize-pane -U 10
-# Panes (parts of windows)
-bind -r up    resize-pane -U 1
-bind -r down  resize-pane -D 1
-bind -r left  resize-pane -L 1
-bind -r right resize-pane -R 1
-bind tab   next-layout
+## quick pane cycling
+#unbind ^w
+#bind ^w select-pane -t :.+
+
+## use the vim resize keys
+#bind -r < resize-pane -L 10
+#bind -r > resize-pane -R 10
+#bind -r - resize-pane -D 10
+#bind -r + resize-pane -U 10
+
+## Panes (parts of windows)
+#bind -r up    resize-pane -U 1
+#bind -r down  resize-pane -D 1
+#bind -r left  resize-pane -L 1
+#bind -r right resize-pane -R 1
+#bind tab   next-layout
 
 bind _   split-window
 bind |   split-window -h
