--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 set -g default-terminal "screen-256color"
-set -g default-command "command -v reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l ${SHELL} || ${SHELL}"
+set -g default-command "command -v reattach-to-user-namespace > /dev/null && exec reattach-to-user-namespace -l ${SHELL} || exec ${SHELL}"
 
 # OS-X cut-and-paste buffers
 if-shell 'command -v reattach-to-user-namespace' 'bind C-c run "tmux show-buffer | reattach-to-user-namespace pbcopy"'
