cleaned up status lines and removed comments

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -106,16 +106,15 @@ set -g set-titles-string "tmux(#S:#I) #W"
 ### Theme ###
 # Status bar.
 set -g status-utf8 on
+set -g status-left-length 15
 set -g status-interval 30
-
-set-option -g status-justify left
 set -g status-attr dim
-set -g status-bg   blue
-set -g status-fg   white
-
+set -g status-left-length 20
+set -g status-right-length 30
+set-option -g status-left-fg '#222222'
 set -g status-justify centre # center spelled funny
-set -g status-left  '#[bg=#0088ff]#[fg=#ffff00] #(echo "${SHORTHOST:-local}") #[default]#[fg=#0088ff]⮀ #[default]'
-set -g status-right '#[fg=#44ff22] ⮂#[default]#[bg=#44ff22]#[fg=#8888bb] #S #[fg=#222222]⮃ #[fg=white]%H:%M %Y/%m/%d #[default]'
+set -g status-left  '#[bg=#0088ff]#[fg=#ffff00] #(echo "${SHORTHOST:-local}") #[default]#[fg=#0088ff]⮀#[default] rspec'
+set -g status-right '#[fg=#44ff22]⮂#[default]#[bg=#44ff22]#[fg=#8888bb] #S #[fg=#222222]⮃ #[fg=white]%H:%M %Y/%m/%d#[default]'
 
 #### Colors #####
 # When it "[tmux]" mode...
@@ -138,10 +137,5 @@ set-option -g mouse-select-window on
 # Message popup.
 set-option -g message-fg black
 set-option -g message-bg green
-
-#set -g status-bg black
-#set -g status-fg white
-#set -g status-interval 60
-#set -g status-left-length 30
 
 # EOF
