Updated for TMux 1.9

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,8 @@ bind-key / command-prompt -p "man page: " "split-window 'exec man %%'"
 bind-key v command-prompt -p "vim: " "split-window 'exec vim %%'"
 bind-key S command-prompt -p "ssh: " "new-window -n %1 'ssh %1'"
 
+bind-key c new-window -c "#{pane_current_path}"
+
 # Monitor Activity
 bind m set-window-option monitor-activity
 set -g visual-activity on
@@ -95,13 +97,16 @@ set -g history-limit 10000
 # Enable utf8. Yes, Please!
 setw -g utf8 on
 
+# Tweak the search
+setw -g wrap-search off
+
 # Enable automatic window renaming to the running command.
 setw -g automatic-rename on
 setw -g allow-rename off
 
 # Set the Terminal's window title
 set -g set-titles on
-set -g set-titles-string "tmux(#S:#I) #W"
+set -g set-titles-string "tmux(#session_name:#window_index) #window_name"
 
 ### Theme ###
 # Status bar.
@@ -111,22 +116,19 @@ set -g status-interval 30
 set -g status-attr dim
 set -g status-left-length 20
 set -g status-right-length 30
-set-option -g status-left-fg '#222222'
 set -g status-justify centre # center spelled funny
+set-option -g status-left-style fg='#222222'
 set -g status-left  '#[bg=#0088ff]#[fg=#ffff00] #(echo "${SHORTHOST:-local}") #[default]#[fg=#0088ff]⮀#[default] rspec'
-set -g status-right '#[fg=#44ff22]⮂#[default]#[bg=#44ff22]#[fg=#8888bb] #S #[fg=#222222]⮃ #[fg=black]%H:%M %Y/%m/%d#[default]'
+set -g status-right '#[fg=#44ff22]⮂#[default]#[bg=#44ff22]#[fg=#8888bb] #session_name #[fg=#222222]⮃ #[fg=black]%H:%M %Y/%m/%d#[default]'
 
 #### Colors #####
 # When it "[tmux]" mode...
-set-window-option -g mode-bg                  '#2222ee'
-set-window-option -g mode-fg                  '#dddddd'
+set-window-option -g mode-style                  fg='#dddddd',bg='#2222ee'
 
 # Status line
-set-window-option -g status-bg                '#222222'
-set-window-option -g status-fg                '#dddddd'
-
-set-window-option -g window-status-fg         '#aaaaaa'
-set-window-option -g window-status-current-fg colour166
+set-window-option -g status-style                fg='#dddddd',bg='#222222'
+set-window-option -g window-status-style         fg='#aaaaaa'
+set-window-option -g window-status-current-style fg=colour166
 
 # Enable mouse support (works in iTerm)
 set-window-option -g mode-mouse copy-mode # Mouse works, except it doesn't start copy mode. (tmux 1.6)
