--- a/.tmux.conf
+++ b/.tmux.conf
@@ -119,7 +119,7 @@ set -g status-right-length 30
 set -g status-justify centre # center spelled funny
 set-option -g status-left-style fg='#222222'
 set -g status-left  '#[bg=#0088ff]#[fg=#ffff00] #(echo "${SHORTHOST:-local}") #[default]#[fg=#0088ff]⮀#[default] rspec'
-set -g status-right "#[fg=#44ff22]⮂#[default]#[bg=#44ff22]#[fg=#8888bb] #{session_name} #[fg=#222222]⮃ #[fg=black]%H:%M %Y/%m/%d#[default]"
+set -g status-right "#[fg=#44ff22]⮂#[default]#[bg=#44ff22]#[fg=#8888bb] #{session_name} #[fg=#222222]⮃ #[fg=black]%l:%M%P %Y/%m/%d#[default]"
 
 #### Colors #####
 # When it "[tmux]" mode...
