fixed terminal title

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -106,7 +106,7 @@ setw -g allow-rename off
 
 # Set the Terminal's window title
 set -g set-titles on
-set -g set-titles-string "tmux(#session_name:#window_index) #window_name"
+set -g set-titles-string "tmux(#S) #I:#W"
 
 ### Theme ###
 # Status bar.
